# production_lakehouse

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: build-and-test.yml
data_extraction/: .env.example  config.py  pyproject.toml
data_extraction/alembic/: env.py
data_extraction/alembic/versions/: 4e7b4b5c3f65_change_columns_from_text_to_string.py  77c8a927798c_create_job_category_and_listing.py
data_extraction/api/adzuna/: extract.py  fetch_categories.py  fetch_jobs.py  process_categories.py
data_extraction/dags/: api_extraction.py
data_extraction/db/: engine.py
data_extraction/mock_data/: categories.json  it-jobs.json  sales-jobs.json
data_extraction/model/: adzuna.py
data_extraction/repostitory/: category.py  jobs.py
