[project]
name = "data-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.1",
    "apache-airflow-providers-postgres>=6.5.3",
    "asyncpg>=0.31.0",
    "boto3>=1.42.44",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "ruff>=0.14.14",
]
